--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ body{
     justify-content: flex-start;
     align-items: center;
     min-height: 100vh;
-    background-color: cornflowerblue;
+    background-color: #6495ed;
     overflow-y: auto;
     overflow-x: hidden;
 }
 
 .game-container {
-    background-color: aquamarine;
+    background-color: #7fffd4;
     padding: 15px;
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -31,14 +31,14 @@ body{
 }
 
 h1{
-    color: blueviolet;
+    color: #8a2be2;
     margin-bottom: 15px;
     font-size: clamp(1.5em,7vw,2.5em);
 }
 
 .score-board{
     font-size: clamp(1em,4vw,1.5em);
-    color: darkgreen;
+    color: #006400;
     margin-bottom: 20px;
     font-weight: bold;
 }
@@ -55,5 +55,74 @@ h1{
 }
 
 .memory-card {
-    
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+    cursor: pointer;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transform-origin: center center;
+}
+
+.memory-card.flip{
+    transform: rotateY(180deg);
+}
+
+.memory-card.match{
+    cursor: default;
+    pointer-events: none;
+}
+
+.front-face, .back-face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 8px;
+    backface-visibility: hidden;
+    object-fit: contain;
+    background-color: #ffffff;
+}
+
+.front-face{
+    transform: rotateY(180deg);
+}
+
+.back-face{
+    background-image: url(flip\ de\ carta.png);
+    background-size: cover;
+    background-position: center;
+}
+
+#restart-button{
+    margin-top: 30px;
+    padding:12px 25px;
+    font-size: clamp(1em,3vw,1.2em);
+    background-color: #ff4500;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor:pointer;
+    transition: backgroun-color 0.3s ease,transform 0.2s ease;
+    box-shadow:0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#restart-button:hover{
+    background-color: #daa520;
+    transform: translateY(-2px);
+}
+
+@media (min-width:768px) {
+    body{
+        justify-content: center;
+    }
+
+    .game-container{
+        padding: 30px;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
 }
